--- a/lcd.css
+++ b/lcd.css
@@ -46,9 +46,8 @@ table {
 }
 
 .kol {
-    width: 450px;
+    width: 100%;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-
 }
