--- a/simulacronestú.css
+++ b/simulacronestú.css
@@ -1,3 +1,4 @@
+/* Organizo el encabezado y le dio sus debidos estilos  */
 header {
     display: flex;
     background-color: aqua;
@@ -5,7 +6,7 @@ header {
 .button {
     position: relative;
     left: 60%;
-    background-color: aqua;
+    background-color: rgb(253, 42, 0);
     border-color: aqua;
     border-radius: 20px;
     color: chartreuse;
@@ -30,10 +31,20 @@ header {
     height: 40px;
 }
 
-body {
+.superior {
     position: relative;
+    display: inline-flex;
 }
-.superior img {
-    position: relative;
-    
+.hamburguesa1 {
+    height: 400px; 
+    width: 500px;
+    border-radius: 40px;
+}
+.reseña {
+    width: 40%;
+    background-color: gray;
+    color: black;
+}
+.reseña img {
+    border-radius: 80px;
 }
